syntax = "proto2";
import public "ase-fep.proto";
import public "fep-ase.proto";

package Proto.Core;

message AseFepMessage {
	oneof OneOf {
		AseFep.Event aseFepEvent = 1;
		AseFep.Req aseFepReq = 2;
		AseFep.Resp aseFepResp = 3;
	}
}

message FepAseMessage {
	oneof OneOf {
		FepAse.Event fepAseEvent = 1;
		FepAse.Req fepAseReq = 2;
		FepAse.Resp fepAseResp = 3;
	}
}
